[package]
name = "sstv-log"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["ws"] }
cpal = "0.16.0"
image = { version = "0.25.8", default-features = false }
num-complex = "0.4.6"
ringbuf = "0.4.8"
rustfft = "6.4.1"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
turso = "0.3.2"
